--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-shopping-cart-starter-kit",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Reusable shopping cart component for React with no extra fluff.",
   "main": "modules/CartStarterKit.jsx.js",
   "directories": {
@@ -47,5 +47,9 @@
     "react-dnd": "^1.1.5",
     "underscore": "^1.8.3",
     "object-assign": "^4.0.1"
+  },
+  "peerDependencies": {
+    "react": "^0.13.3",
+    "browserify": "^11.0.1"
   }
 }
